Fixing problems on mobile.

--- a/styles/sliders.css
+++ b/styles/sliders.css
@@ -1,15 +1,14 @@
 @media (max-width: 480px) {
-  .gallery,
-  .gallery__noclegi {
-    height: 30em;
-    width: 100vw;
+  .gallery__slider-buttons {
+    position: relative;
+    width: 100%;
   }
   .gallery__slider-button-previous-wrapper,
   .gallery__slider-button-next-wrapper {
     position: absolute;
     z-index: 1;
     width: 5em;
-    height: 30em;
+    height: 15em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,16 +23,16 @@
     width: 1.5em;
     height: 1.4em;
     transform: rotate(45deg);
-    border-bottom: 3px solid rgb(255, 255, 255);
-    border-left: 3px solid rgb(255, 255, 255);
+    border-bottom: 3px solid rgb(0, 0, 0);
+    border-left: 3px solid rgb(0, 0, 0);
     opacity: 0.5;
   }
   .gallery__button-next {
     width: 1.5em;
     height: 1.4em;
     transform: rotate(45deg);
-    border-top: 3px solid rgb(255, 255, 255);
-    border-right: 3px solid rgb(255, 255, 255);
+    border-top: 3px solid rgb(0, 0, 0);
+    border-right: 3px solid rgb(0, 0, 0);
     opacity: 0.5;
   }
   .gallery__button-previous:hover,
@@ -41,8 +40,8 @@
     opacity: 1;
   }
   .photos__wrapper {
-    height: 30em;
-    width: 100vw;
+    height: 15em;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,7 +54,7 @@
     left: 0;
     width: 100%;
     /* max-width: 390px; */
-    max-height: 30em;
+    max-height: 20em;
     /* border-radius: 10% 0 10% 0; */
     animation: showUp 1s ease-in;
   }
@@ -80,7 +79,7 @@
     position: absolute;
     z-index: 1;
     width: 5em;
-    height: 30em;
+    height: 25em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,8 +111,8 @@
     opacity: 1;
   }
   .photos__wrapper {
-    height: 30em;
-    width: 100vw;
+    height: 25em;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -126,7 +125,7 @@
     left: 0;
     width: 100%;
     /* max-width: 390px; */
-    max-height: 30em;
+    max-height: 25em;
     /* border-radius: 10% 0 10% 0; */
     animation: showUp 1s ease-in;
   }
@@ -141,79 +140,81 @@
   /******************** GALLERY SLIDER ********************/
 }
 /******************** GALLERY SLIDER ??????**************************/
-.gallery,
-.gallery__noclegi {
-  height: 15em;
-  width: 100%;
-  position: relative;
-}
-.gallery__slider-button-previous-wrapper,
-.gallery__slider-button-next-wrapper {
-  position: absolute;
-  top: 15em;
-  z-index: 1;
-  width: 3em;
-  height: 15em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.gallery__slider-buttons {
-  position: relative;
-  width: 100%;
-}
-.gallery__slider-button-previous-wrapper {
-  left: 0.5em;
-}
-.gallery__slider-button-next-wrapper {
-  right: 0.5em;
-}
-.gallery__button-previous {
-  width: 1.5em;
-  height: 1.4em;
-  transform: rotate(45deg);
-  border-bottom: 3px solid rgb(0, 0, 0);
-  border-left: 3px solid rgb(0, 0, 0);
-  opacity: 0.5;
-}
-.gallery__button-next {
-  width: 1.5em;
-  height: 1.4em;
-  transform: rotate(45deg);
-  border-top: 3px solid rgb(0, 0, 0);
-  border-right: 3px solid rgb(0, 0, 0);
-  opacity: 0.5;
-}
-.gallery__button-previous:hover,
-.gallery__button-next:hover {
-  opacity: 1;
-}
-.photos__wrapper {
-  /* height: 50%; */
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-.slide__photos-bialokosz,
-.slide__photos-bialokosz--noclegi,
-.img__photo {
-  position: relative;
-  top: 0;
-  left: 0;
-  /* width: 100%; */
-  max-width: 100vw;
-  max-height: 40em;
-  /* border-radius: 10% 0 10% 0; */
-  animation: showUp 1s ease-in;
-}
-@keyframes showUp {
-  0% {
-    opacity: 0;
+@media (min-width: 769px) {
+  .gallery,
+  .gallery__noclegi {
+    height: 15em;
+    width: 100%;
+    position: relative;
   }
-  100% {
+  .gallery__slider-button-previous-wrapper,
+  .gallery__slider-button-next-wrapper {
+    position: absolute;
+    top: 15em;
+    z-index: 1;
+    width: 3em;
+    height: 15em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .gallery__slider-buttons {
+    position: relative;
+    width: 100%;
+  }
+  .gallery__slider-button-previous-wrapper {
+    left: 0.5em;
+  }
+  .gallery__slider-button-next-wrapper {
+    right: 0.5em;
+  }
+  .gallery__button-previous {
+    width: 1.5em;
+    height: 1.4em;
+    transform: rotate(45deg);
+    border-bottom: 3px solid rgb(0, 0, 0);
+    border-left: 3px solid rgb(0, 0, 0);
+    opacity: 0.5;
+  }
+  .gallery__button-next {
+    width: 1.5em;
+    height: 1.4em;
+    transform: rotate(45deg);
+    border-top: 3px solid rgb(0, 0, 0);
+    border-right: 3px solid rgb(0, 0, 0);
+    opacity: 0.5;
+  }
+  .gallery__button-previous:hover,
+  .gallery__button-next:hover {
     opacity: 1;
+  }
+  .photos__wrapper {
+    /* height: 50%; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  .slide__photos-bialokosz,
+  .slide__photos-bialokosz--noclegi,
+  .img__photo {
+    position: relative;
+    top: 0;
+    left: 0;
+    /* width: 100%; */
+    max-width: 100vw;
+    max-height: 40em;
+    /* border-radius: 10% 0 10% 0; */
+    animation: showUp 1s ease-in;
+  }
+  @keyframes showUp {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
 }
 /******************** GALLERY SLIDER ********************/
